--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Functional Specs
+Basic Specs
 ----------------
 - cloud based
+- serverless
+
+Customer Benenfits
+----------------
+- Usage of Modular Mobility Services
+- One trip planning, booking and ticket validation platform
